--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #6c9a80;
-  color: #fffff;
+  color: #ffffff;
 }
 
 h1 {
@@ -8,7 +8,7 @@ h1 {
   align: center;
 }
 
-h2 {
+h2, h3, h4 {
   color: #42654d;
 }
 
