--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .topnav {
   overflow: hidden;
-  background-color: #c3b5ff;
+  background-color: #8d629c;
   margin-left: 0px;
   margin-right: 0px;
 }
@@ -15,7 +15,7 @@
 }
 
 .topnav a:hover {
-  background-color: #cdc6ff;
+  background-color: #be8bc1;
   color: #ffffff;
 }
 
