--- a/style.css
+++ b/style.css
@@ -35,11 +35,16 @@ h2, h3, h4, h5 {
   color: #634c81;
 }
 
-a {
+.normal a {
   color: #be8bc1;
   font-family: Arial, sans-serif;
   margin-right: 100px;
   margin-left: 10px;
+}
+
+a {
+  color: #be8bc1;
+  font-family: Arial, sans-serif;
 }
 
 img {
