--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2, h3, h4, h5 {
   color: #634c81;
 }
 
-.normal a {
+#normal a {
   color: #be8bc1;
   font-family: Arial, sans-serif;
   margin-right: 100px;
