--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .topnav {
    overflow: hidden;
-   background-color: #494949;
+   background-color: #8d629c;
    margin-left: 0px;
    margin-right: 0px;
  }
@@ -8,48 +8,48 @@
  .topnav a {
    float: left;
    display: block;
-   color: #30E641;
+   color: #ffffff;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
  }
 
  .topnav a:hover {
-   background-color: #595959;
-   color: #30E641;
+   background-color: #be8bc1;
+   color: #ffffff;
  }
 
  .selectedLink {
-   background-color: #595959;
-   color: #30E641;
+   background-color: #321854;
+   color: #ffffff;
  }
 
  body {
-   background-color: #000000;
-   color: #595959;
+   background-color: #fff9ef;
+   color: #321854;
    margin-right: 0px;
    margin-left: 0px;
  }
 
  h1 {
-   color: #2bcf3a;
+   color: #53347a;
    align: center;
  }
 
  h2, h3, h4, h5 {
-   color: #26b834;
+   color: #634c81;
  }
 
  #normal a {
-   color: #6eed7a;
-   font-family:  Consolas, Courier New;
+   color: #be8bc1;
+   font-family: Arial, sans-serif;
    margin-right: 100px;
    margin-left: 10px;
  }
 
  a {
-   color: #6eed7a;
-   font-family: Consolas, Courier New;
+   color: #be8bc1;
+   font-family: Arial, sans-serif;
  }
 
  img {
@@ -57,8 +57,7 @@
 
 
  p, h1, h2, h3, h4, h5 {
-     font-family: Consolas, Courier New;
+     font-family: Arial, sans-serif;
      margin-right: 100px;
      margin-left: 10px;
  }
-
