--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
 img {
 	max-height: 50vh;
 	max-width: 90%;
+	display: block;
+        margin-left: auto;
+        margin-right: auto;
 }
 
 a.title {
