--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
 	padding: 20px;
 	background-color: #333333;
 	color: white;
-	margin: 5%;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 img {
