--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
+	padding-top: 10px;
 	padding-left: 20px;
 	padding-right: 20px;
+	padding-bottom: 20px;
 	background-color: #333333;
 	color: white;
 	margin-top: 1%;
